[package]
name = "libdof"
version = "0.14.12"
edition = "2021"
authors = ["Oxey", "Asya"]
description = ".dof file protocol, a keyboard layout format specification"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/O-X-E-Y/libdof"
documentation = "https://docs.rs/libdof"


[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_with = "3.6.1"
thiserror = "1.0.57"
