[package]
name = "libdof"
version = "0.18.0"
edition = "2021"
authors = ["Oxey", "Asya"]
description = ".dof file protocol, a keyboard layout format specification"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/O-X-E-Y/libdof"
documentation = "https://docs.rs/libdof"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.6"
thiserror = "1.0"

[dev-dependencies]
assert_matches = "1.5.0"
serde_json = "1.0"
